# pure_pursuit

./: CMakeLists.txt  main.cpp  pure.h
LQR/: .clang-format  CMakeLists.txt
LQR/src/: lqr.cpp  lqr.h  main.cpp  vehicle.h
pure_pursuit/: CMakeLists.txt
pure_pursuit/src/: main.cpp  pure.cpp
src/: pure.cpp
